@@ -153,6 +153,12 @@
  */
 #define MPI_Op_free_U MPI_OP_FREE
 
+/** @def MPI_Alloc_mem_cptr_U
+    Exchanges MPI_Alloc_mem_cptr_U with MPI_ALLOC_MEM_CPTR.
+    It is used for the Fortran TYPE(C_PTR) overload wrappers of MPI_Alloc_mem.
+ */
+#define MPI_Alloc_mem_cptr_U MPI_ALLOC_MEM_CPTR
+
 /* lowercase defines */
 
 /** @def MPI_Alloc_mem_L
@@ -244,6 +250,12 @@
     It is used for the Fortran wrappers of MPI_Op_free.
  */
 #define MPI_Op_free_L mpi_op_free
+
+/** @def MPI_Alloc_mem_cptr_L
+    Exchanges MPI_Alloc_mem_cptr_L with mpi_alloc_mem_cptr.
+    It is used for the Fortran TYPE(C_PTR) overload wrappers of MPI_Alloc_mem.
+ */
+#define MPI_Alloc_mem_cptr_L mpi_alloc_mem_cptr
 
 /**
  * @name Fortran wrappers
@@ -583,6 +595,25 @@ FSUB( MPI_Op_free )( MPI_Op* op, int* ierr )
 
 
     *ierr = MPI_Op_free( op );
+
+    SCOREP_IN_MEASUREMENT_DECREMENT();
+}
+#endif
+#if HAVE( DECL_PMPI_ALLOC_MEM ) && !defined( SCOREP_MPI_NO_EXTRA ) && !defined( SCOREP_MPI_NO_MISC ) && !defined( MPI_Alloc_mem )
+/**
+ * Measurement TYPE(C_PTR) overload wrapper for MPI_Alloc_mem
+ * @note Auto-generated by wrapgen from template: SCOREP_Fmpi_Std_Cptr.w
+ * @note Fortran interface
+ * @note Introduced with MPI-2
+ * @ingroup misc
+ */
+void
+FSUB( MPI_Alloc_mem_cptr )( MPI_Aint* size, MPI_Info* info, void* baseptr, int* ierr )
+{
+    SCOREP_IN_MEASUREMENT_INCREMENT();
+
+
+    *ierr = MPI_Alloc_mem( *size, *info, baseptr );
 
     SCOREP_IN_MEASUREMENT_DECREMENT();
 }
@@ -947,6 +978,26 @@ FSUB( MPI_Op_free )( MPI_Fint* op, MPI_Fint* ierr )
     *ierr = MPI_Op_free( &c_op );
 
     *op = PMPI_Op_c2f( c_op );
+    SCOREP_IN_MEASUREMENT_DECREMENT();
+}
+#endif
+#if HAVE( DECL_PMPI_ALLOC_MEM ) && !defined( SCOREP_MPI_NO_EXTRA ) && !defined( SCOREP_MPI_NO_MISC ) && !defined( MPI_Alloc_mem )
+/**
+ * Measurement TYPE(C_PTR) overload wrapper for MPI_Alloc_mem
+ * @note Auto-generated by wrapgen from template: SCOREP_Mpi_F2c_C2f_Cptr.w
+ * @note Fortran interface
+ * @note Introduced with MPI-2
+ * @ingroup misc
+ * For the order of events see @ref MPI_Alloc_mem
+ */
+void
+FSUB( MPI_Alloc_mem_cptr )( MPI_Aint* size, MPI_Fint* info, void* baseptr, MPI_Fint* ierr )
+{
+    SCOREP_IN_MEASUREMENT_INCREMENT();
+
+
+    *ierr = MPI_Alloc_mem( *size, PMPI_Info_f2c( *info ), baseptr );
+
     SCOREP_IN_MEASUREMENT_DECREMENT();
 }
 #endif
