@@ -265,6 +265,25 @@
 #define MPI_Win_wait_U MPI_WIN_WAIT
 
 
+/** @def MPI_Win_allocate_cptr_U
+    Exchanges MPI_Win_allocate_cptr_U with MPI_WIN_ALLOCATE_CPTR.
+    It is used for the Fortran TYPE(C_PTR) overload wrappers of MPI_Win_allocate.
+ */
+#define MPI_Win_allocate_cptr_U MPI_WIN_ALLOCATE_CPTR
+
+/** @def MPI_Win_allocate_shared_cptr_U
+    Exchanges MPI_Win_allocate_shared_cptr_U with MPI_WIN_ALLOCATE_SHARED_CPTR.
+    It is used for the Fortran TYPE(C_PTR) overload wrappers of MPI_Win_allocate_shared.
+ */
+#define MPI_Win_allocate_shared_cptr_U MPI_WIN_ALLOCATE_SHARED_CPTR
+
+/** @def MPI_Win_shared_query_cptr_U
+    Exchanges MPI_Win_shared_query_cptr_U with MPI_WIN_SHARED_QUERY_CPTR.
+    It is used for the Fortran TYPE(C_PTR) overload wrappers of MPI_Win_shared_query.
+ */
+#define MPI_Win_shared_query_cptr_U MPI_WIN_SHARED_QUERY_CPTR
+
+
 /** @def MPI_Win_create_keyval_U
     Exchanges MPI_Win_create_keyval_U with MPI_WIN_CREATE_KEYVAL.
     It is used for the Fortran wrappers of MPI_Win_create_keyval.
@@ -525,6 +544,25 @@
     It is used for the Fortran wrappers of MPI_Win_wait.
  */
 #define MPI_Win_wait_L mpi_win_wait
+
+
+/** @def MPI_Win_allocate_cptr_L
+    Exchanges MPI_Win_allocate_cptr_L with mpi_win_allocate_cptr.
+    It is used for the Fortran TYPE(C_PTR) overload wrappers of MPI_Win_allocate.
+ */
+#define MPI_Win_allocate_cptr_L mpi_win_allocate_cptr
+
+/** @def MPI_Win_allocate_shared_cptr_L
+    Exchanges MPI_Win_allocate_shared_cptr_L with mpi_win_allocate_shared_cptr.
+    It is used for the Fortran TYPE(C_PTR) overload wrappers of MPI_Win_allocate_shared.
+ */
+#define MPI_Win_allocate_shared_cptr_L mpi_win_allocate_shared_cptr
+
+/** @def MPI_Win_shared_query_cptr_L
+    Exchanges MPI_Win_shared_query_cptr_L with mpi_win_shared_query_cptr.
+    It is used for the Fortran TYPE(C_PTR) overload wrappers of MPI_Win_shared_query.
+ */
+#define MPI_Win_shared_query_cptr_L mpi_win_shared_query_cptr
 
 
 /** @def MPI_Win_create_keyval_L
@@ -1468,6 +1506,63 @@ FSUB( MPI_Win_unlock_all )( MPI_Win* win, int* ierr )
 
 
     *ierr = MPI_Win_unlock_all( *win );
+
+    SCOREP_IN_MEASUREMENT_DECREMENT();
+}
+#endif
+#if HAVE( DECL_PMPI_WIN_ALLOCATE ) && !defined( SCOREP_MPI_NO_RMA ) && !defined( MPI_Win_allocate )
+/**
+ * Measurement TYPE(C_PTR) overload wrapper for MPI_Win_allocate
+ * @note Auto-generated by wrapgen from template: SCOREP_Fmpi_Std_Cptr.w
+ * @note Fortran interface
+ * @note Introduced with MPI-3
+ * @ingroup rma
+ */
+void
+FSUB( MPI_Win_allocate_cptr )( MPI_Aint* size, int* disp_unit, MPI_Info* info, MPI_Comm* comm, void* baseptr, MPI_Win* win, int* ierr )
+{
+    SCOREP_IN_MEASUREMENT_INCREMENT();
+
+
+    *ierr = MPI_Win_allocate( *size, *disp_unit, *info, *comm, baseptr, win );
+
+    SCOREP_IN_MEASUREMENT_DECREMENT();
+}
+#endif
+#if HAVE( DECL_PMPI_WIN_ALLOCATE_SHARED ) && !defined( SCOREP_MPI_NO_RMA ) && !defined( MPI_Win_allocate_shared )
+/**
+ * Measurement TYPE(C_PTR) overload wrapper for MPI_Win_allocate_shared
+ * @note Auto-generated by wrapgen from template: SCOREP_Fmpi_Std_Cptr.w
+ * @note Fortran interface
+ * @note Introduced with MPI-3
+ * @ingroup rma
+ */
+void
+FSUB( MPI_Win_allocate_shared_cptr )( MPI_Aint* size, int* disp_unit, MPI_Info* info, MPI_Comm* comm, void* baseptr, MPI_Win* win, int* ierr )
+{
+    SCOREP_IN_MEASUREMENT_INCREMENT();
+
+
+    *ierr = MPI_Win_allocate_shared( *size, *disp_unit, *info, *comm, baseptr, win );
+
+    SCOREP_IN_MEASUREMENT_DECREMENT();
+}
+#endif
+#if HAVE( DECL_PMPI_WIN_SHARED_QUERY ) && !defined( SCOREP_MPI_NO_RMA ) && !defined( MPI_Win_shared_query )
+/**
+ * Measurement TYPE(C_PTR) overload wrapper for MPI_Win_shared_query
+ * @note Auto-generated by wrapgen from template: SCOREP_Fmpi_Std_Cptr.w
+ * @note Fortran interface
+ * @note Introduced with MPI-3
+ * @ingroup rma
+ */
+void
+FSUB( MPI_Win_shared_query_cptr )( MPI_Win* win, int* rank, MPI_Aint* size, int* disp_unit, void* baseptr, int* ierr )
+{
+    SCOREP_IN_MEASUREMENT_INCREMENT();
+
+
+    *ierr = MPI_Win_shared_query( *win, *rank, size, disp_unit, baseptr );
 
     SCOREP_IN_MEASUREMENT_DECREMENT();
 }
@@ -2424,6 +2519,70 @@ FSUB( MPI_Win_unlock_all )( MPI_Fint* win, MPI_Fint* ierr )
 
 
     *ierr = MPI_Win_unlock_all( PMPI_Win_f2c( *win ) );
+
+    SCOREP_IN_MEASUREMENT_DECREMENT();
+}
+#endif
+#if HAVE( DECL_PMPI_WIN_ALLOCATE ) && !defined( SCOREP_MPI_NO_RMA ) && !defined( MPI_Win_allocate )
+/**
+ * Measurement TYPE(C_PTR) overload wrapper for MPI_Win_allocate
+ * @note Auto-generated by wrapgen from template: SCOREP_Mpi_F2c_C2f_Cptr.w
+ * @note Fortran interface
+ * @note Introduced with MPI-3
+ * @ingroup rma
+ * For the order of events see @ref MPI_Win_allocate
+ */
+void
+FSUB( MPI_Win_allocate_cptr )( MPI_Aint* size, MPI_Fint* disp_unit, MPI_Fint* info, MPI_Fint* comm, void* baseptr, MPI_Fint* win, MPI_Fint* ierr )
+{
+    SCOREP_IN_MEASUREMENT_INCREMENT();
+    MPI_Win c_win;
+
+
+    *ierr = MPI_Win_allocate( *size, *disp_unit, PMPI_Info_f2c( *info ), PMPI_Comm_f2c( *comm ), baseptr, &c_win );
+
+    *win = PMPI_Win_c2f( c_win );
+    SCOREP_IN_MEASUREMENT_DECREMENT();
+}
+#endif
+#if HAVE( DECL_PMPI_WIN_ALLOCATE_SHARED ) && !defined( SCOREP_MPI_NO_RMA ) && !defined( MPI_Win_allocate_shared )
+/**
+ * Measurement TYPE(C_PTR) overload wrapper for MPI_Win_allocate_shared
+ * @note Auto-generated by wrapgen from template: SCOREP_Mpi_F2c_C2f_Cptr.w
+ * @note Fortran interface
+ * @note Introduced with MPI-3
+ * @ingroup rma
+ * For the order of events see @ref MPI_Win_allocate_shared
+ */
+void
+FSUB( MPI_Win_allocate_shared_cptr )( MPI_Aint* size, MPI_Fint* disp_unit, MPI_Fint* info, MPI_Fint* comm, void* baseptr, MPI_Fint* win, MPI_Fint* ierr )
+{
+    SCOREP_IN_MEASUREMENT_INCREMENT();
+    MPI_Win c_win;
+
+
+    *ierr = MPI_Win_allocate_shared( *size, *disp_unit, PMPI_Info_f2c( *info ), PMPI_Comm_f2c( *comm ), baseptr, &c_win );
+
+    *win = PMPI_Win_c2f( c_win );
+    SCOREP_IN_MEASUREMENT_DECREMENT();
+}
+#endif
+#if HAVE( DECL_PMPI_WIN_SHARED_QUERY ) && !defined( SCOREP_MPI_NO_RMA ) && !defined( MPI_Win_shared_query )
+/**
+ * Measurement TYPE(C_PTR) overload wrapper for MPI_Win_shared_query
+ * @note Auto-generated by wrapgen from template: SCOREP_Mpi_F2c_C2f_Cptr.w
+ * @note Fortran interface
+ * @note Introduced with MPI-3
+ * @ingroup rma
+ * For the order of events see @ref MPI_Win_shared_query
+ */
+void
+FSUB( MPI_Win_shared_query_cptr )( MPI_Fint* win, MPI_Fint* rank, MPI_Aint* size, MPI_Fint* disp_unit, void* baseptr, MPI_Fint* ierr )
+{
+    SCOREP_IN_MEASUREMENT_INCREMENT();
+
+
+    *ierr = MPI_Win_shared_query( PMPI_Win_f2c( *win ), *rank, size, disp_unit, baseptr );
 
     SCOREP_IN_MEASUREMENT_DECREMENT();
 }
