@@ -1,0 +1,6 @@
+
+/** @def ${name}_cptr_L
+    Exchanges ${name}_cptr_L with ${name|lowercase}_cptr.
+    It is used for the Fortran TYPE(C_PTR) overload wrappers of ${name}.
+*/
+#define ${name}_cptr_L ${name|lowercase}_cptr
