@@ -1,0 +1,6 @@
+
+/** @def ${name}_cptr_U
+    Exchanges ${name}_cptr_U with ${name|uppercase}_CPTR.
+    It is used for the Fortran TYPE(C_PTR) overload wrappers of ${name}.
+*/
+#define ${name}_cptr_U ${name|uppercase}_CPTR
