@@ -63,9 +63,11 @@
 
 /* uppercase defines */
 #pragma wrapgen multiple restrict(gmisc+!n_c2f+!n_f2c+!nddress) skel/SCOREP_Fmpi_DefineU.w
+#pragma wrapgen single MPI_Alloc_mem skel/SCOREP_Fmpi_DefineU_Cptr.w
 
 /* lowercase defines */
 #pragma wrapgen multiple restrict(gmisc+!n_c2f+!n_f2c+!nddress) skel/SCOREP_Fmpi_DefineL.w
+#pragma wrapgen single MPI_Alloc_mem skel/SCOREP_Fmpi_DefineL_Cptr.w
 
 /**
  * @name Fortran wrappers
@@ -79,10 +81,12 @@
  * => we can save the f2c and c2s conversions */
 
 #pragma wrapgen multiple restrict(gmisc+!n_c2f+!n_f2c+!nddress) skel/SCOREP_Fmpi_Std.w
+#pragma wrapgen single MPI_Alloc_mem skel/SCOREP_Fmpi_Std_Cptr.w
 
 #else /* !NEED_F2C_CONV */
 
 #pragma wrapgen multiple restrict(gmisc+!n_c2f+!n_f2c+!nddress) skel/SCOREP_Mpi_F2c_C2f.w
+#pragma wrapgen single MPI_Alloc_mem skel/SCOREP_Mpi_F2c_C2f_Cptr.w
 
 #endif
 
